<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Nexus IDE</string>
    
    <!-- Storage Permission -->
    <string name="permission">Permissão de armazenamento</string>
    <string name="permission_message">O Nexus IDE precisa de acesso ao armazenamento para funcionar corretamente.</string>
    
    <!-- common -->
    <string name="copy">Copiar</string>
    <string name="save">Salvar</string>
    <string name="cancel">Cancelar</string>
    <string name="create">Criar</string>
    <string name="exit">Sair</string>
    
    <!-- home -->
    <string name="create_project">Criar projeto</string>
    <string name="open_project">Abrir projeto</string>
    <string name="git_clone">Clonar repositório git</string>
    <string name="more_options">Mais opções</string>
    <string name="terminal">Terminal</string>
    <string name="settings">Configurações</string>
    
    <!-- wizard template -->
    <string name="wizard_templates_title">Exemplos</string>
    <string name="wizard_templates_androidx">AndroidX Project</string>
    <string name="wizard_templates_empty">Empty Project</string>
    <string name="wizard_templates_game">LibGDX Project</string>
    
    <!-- wizard details -->
    <string name="wizard_application_name">Nome do aplicativo</string>
    <string name="wizard_package_name">Nome do pacote</string>
    <string name="wizard_save_location">Local de salvamento</string>
    <string name="wizard_default_language">Linguagem Padrão</string>
    <string name="wizard_min_sdk">SDK Mínimo</string>
    
    <!-- wizard details errors -->
    
    <string name="wizard_app_name_is_null">O nome do aplicativo não pode estar vazio.</string>
    <string name="wizard_app_name_exists">O nome do aplicativo já existe.</string>
    
    <string name="wizard_pkg_name_is_null">O nome do pacote não pode estar vazio.</string>
    <string name="wizard_pkg_name_incorrect_characters">O nome do pacote contém carácteres incorretos.</string>
    <string name="wizard_pkg_name_is_very_short">O nome do pacote é muito curto.</string>
    
    <string name="wizard_save_directory_not_exists">O Diretório não existe</string>
    <string name="wizard_save_is_a_file">Deve ser um Diretório</string>
    
    <!-- open projects -->
    
    <string name="projects_title">Projetos</string>
    <string name="no_projects_found">Nenhum projeto encontrado</string>
    
    <!-- about -->
    <string name="app_slogan">Imagine, Crie, Compartilhe</string>
    
    <!-- code editor menu -->
    
    <string name="undo">Desfazer</string>
    <string name="redo">Refazer</string>
    <string name="execute">Executar</string>
    <string name="search">Procurar</string>
    <string name="reload_color_scheme">Recarregar esquema de cores</string>
    
    <!-- fileManager -->
    
    <string name="fileManager">Explorador de arquivos</string>
    
    <!-- editor -->
    
    <string name="install_required_rscs">Instalar recursos necessários</string>
    <string name="required_rscs_description">Isso fará o download do recurso: \n• index.json (necessário para completion java)</string>
    <string name="install_resources">Instalar</string>
    
    <string name="no_files_opened">Nenhum arquivo aberto</string>
    
    <!-- settings -->
    
    <string name="settings_category">Configurações</string>
    
    <string name="general_title">Geral</string>
    <string name="general_summary">Configurações gerais do Nexus IDE.</string>
    <string name="editor_title">Editor</string>
    <string name="editor_summary">Configurações do Editor de Código.</string>
    <string name="compiler_title">Compilar &amp; Instalar</string>
    <string name="compiler_summary">Configurações do compilador e instalador.</string>
    <string name="plugin_title">Plugins</string>
    <string name="plugin_summary">Explore e instale plugins para a IDE.</string>
    <string name="git_title">Git</string>
    <string name="git_summary">Configurações do Github</string>
    
    <string name="about_category">Sobre</string>
    
    <string name="about_us_title">Sobre nós</string>
    <string name="about_us_summary">Mais informações sobre nós da Nexus-IDE.</string>
    
    <!-- editor settings -->
    
    <string name="appearance_category">Aparência</string>
    
    <string name="ui_mode_title">Modo da Ui</string>
    <string name="ui_mode_summary">Escolha o tema entre claro e escuro.</string>
    
    <string name="ui_theme_title">Tema da Ui</string>
    <string name="ui_theme_summary">Selecione um tema para o Nexus IDE.</string>
    
    <string name="ui_mode_value_followsys">Seguir o sistema</string>
    <string name="ui_mode_value_light">Claro</string>
    <string name="ui_mode_value_dark">Escuro</string>
    
    <string name="ui_theme_value_pyro">Pyro</string>
    <string name="ui_theme_value_indigo">Indigo</string>
    <string name="ui_theme_value_flamingo">Flamingo</string>
    <string name="ui_theme_value_mint">Mint</string>
    <string name="ui_theme_value_esmerald">Esmerald</string>
    
</resources>